[Style] Fix mobile menu z-index error

--- a/app/components/ClassifyPhase/Aside/style.module.scss
+++ b/app/components/ClassifyPhase/Aside/style.module.scss
@@ -52,7 +52,7 @@
 	height: 60px;
 	border-radius: 30px 0px 30px 30px;
 	background: colors.$maingrad;
-	z-index: 2;
+	z-index: 5;
 	cursor: pointer;
 }
 
@@ -92,7 +92,7 @@
     visibility: visible;
     opacity: 1;
 	transition: opacity 0.2s linear, visibility 0.2s linear;
-	z-index: 1;
+	z-index: 4;
 	&.hidden {
 		visibility: hidden;
 		opacity: 0;
